# sql-parser

./: .gitignore  README.md  checksum-Elixir.SQLParser.Native.exs  mix.exs
.github/workflows/: release.yml
lib/: sql_parser.ex
lib/sql_parser/: native.ex
native/sql_parser/: Cargo.toml  README.md
native/sql_parser/src/: lib.rs
test/: sql_parser_test.exs
