[package]
name = "sql_parser"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "sql_parser"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlparser = { version = "0.38.0", features = ["serde"] }
